--- a/index.html
+++ b/index.html
@@ -60,13 +60,10 @@
         <div class="menu__nav">
             <ul class="menu__list">
                 <li class="menu__item">
-                    <a href="/chemin de la page festivale" class="menu__link">Le Festival</a>
+                    <a href="/chemin de la page festivale" class="menu__link">Festival</a>
                 </li>
                 <li class="menu__item">
                     <a href="/page/programme.html" class="menu__link">Programme</a>
-                </li>
-                <li class="menu__item">
-                    <a href="/chemin de la page artiste" class="menu__link">Artiste</a>
                 </li>
                 <li class="menu__item">
                     <a href="/chemin de la page Scene" class="menu__link">Scène</a>
