--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
         <div class="menu__nav">
             <ul class="menu__list">
                 <li class="menu__item">
-                    <a href="/chemin de la page festivale" class="menu__link">Festival</a>
+                    <a href="/Festival.html" class="menu__link">Festival</a>
                 </li>
                 <li class="menu__item">
-                    <a href="/page/programme.html" class="menu__link">Programme</a>
+                    <a href="/programme.html" class="menu__link">Programme</a>
                 </li>
                 <li class="menu__item">
-                    <a href="/chemin de la page Scene" class="menu__link">Scène</a>
+                    <a href="/Scène.html" class="menu__link">Scène</a>
                 </li>
                 <li class="menu__item">
-                    <a href="/chemin de la page info pratique" class="menu__link">Info pratique</a>
+                    <a href="/index.html" class="menu__link">Info pratique</a>
                 </li>
                 <li class="menu__item">
-                    <a href="/chemin de la page contact" class="menu__link">Contact</a>
+                    <a href="/Contact.html" class="menu__link">Contact</a>
                 </li>
             </ul>
         </div>
