--- a/programme.html
+++ b/programme.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Les rives du Territoire</title>
     <!-- add css -->
-    <link rel="stylesheet" href="../src/css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
     <!-- Added script.js -->
-    <script type="module" src="../src/js/script.js"></script>
+    <script type="module" src="src/js/script.js"></script>
     <!--favicons-->
-    <link rel="icon" type="image/png" href="../assets/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="../assets/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="../assets/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="../assets/favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="assets/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="assets/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="assets/favicon/site.webmanifest" />
     <!-- add typo-->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
@@ -29,7 +29,7 @@
     <header class="header">
         <div class="header__container">
             <div class="header__logo">
-                <img src="../assets/icons/logo.svg" alt="Les rives du Territoire" class="header__logo-image">
+                <img src="assets/icons/logo.svg" alt="Les rives du Territoire" class="header__logo-image">
             </div>
             <button class="header__menu-toggle" aria-label="Ouvrir le menu de navigation" aria-expanded="false"
                 aria-controls="menu">
@@ -39,13 +39,16 @@
             </button>
         </div>
     </header>
+
+
 <!-- fin header -->
- 
-     <!-- menu -->
+
+
+    <!-- menu -->
     <nav class="menu" id="menu" aria-label="Navigation principale">
         <div class="menu__header">
             <a href="index.html" class="menu__logo">
-                <img src="../assets/icons/logo.svg" alt="Les rives du Territoire" class="menu__logo-img">
+                <img src="assets/icons/logo.svg" alt="Les rives du Territoire" class="menu__logo-img">
             </a>
 
             <button class="menu__close" aria-label="Fermer le menu">
@@ -57,19 +60,19 @@
         <div class="menu__nav">
             <ul class="menu__list">
                 <li class="menu__item">
-                    <a href="/chemin de la page festivale" class="menu__link">Festival</a>
+                    <a href="/Festival.html" class="menu__link">Festival</a>
                 </li>
                 <li class="menu__item">
-                    <a href="/page/programme.html" class="menu__link">Programme</a>
+                    <a href="/programme.html" class="menu__link">Programme</a>
                 </li>
                 <li class="menu__item">
-                    <a href="/chemin de la page Scene" class="menu__link">Scène</a>
+                    <a href="/Scène.html" class="menu__link">Scène</a>
                 </li>
                 <li class="menu__item">
-                    <a href="/chemin de la page info pratique" class="menu__link">Info pratique</a>
+                    <a href="/index.html" class="menu__link">Info pratique</a>
                 </li>
                 <li class="menu__item">
-                    <a href="/chemin de la page contact" class="menu__link">Contact</a>
+                    <a href="/Contact.html" class="menu__link">Contact</a>
                 </li>
             </ul>
         </div>
