--- a/Festival.html
+++ b/Festival.html
@@ -69,7 +69,7 @@
                     <a href="/Scène.html" class="menu__link">Scène</a>
                 </li>
                 <li class="menu__item">
-                    <a href="/index.html" class="menu__link">Info pratique</a>
+                    <a href="/infopratique.html" class="menu__link">Info pratique</a>
                 </li>
                 <li class="menu__item">
                     <a href="/Contact.html" class="menu__link">Contact</a>
@@ -79,3 +79,166 @@
     </nav>
 
 <!-- fin menu -->
+
+<!-- Festival -->
+
+<section class="festival">
+    <div class="festival__title">
+        <h1 class="festival__title">Le Festival</h1>
+        <p class="festival__descrition">Découvrez l'histoire, les valeurs et l'équipe derrière Les Rives du
+Territoire</p>
+    </div>
+</section>
+<!-- fin Festival -->
+
+<!-- histoire du festival -->
+ <section class="festival__section">
+    <div class="festival__content">
+        <div class="histoire_du_festival">
+            <h2 class="festival__subtitle">Histoire du festival</h2>
+        </div>
+        <div>
+            <p> Les Rives du Territoire est un festival de musiques actuelles et de culture urbaine créé en
+        2026. Né de la volonté de mettre en avant les talents émergents locaux et de créer une
+        fusion unique entre musique, street-art et écologie urbaine.</p>
+            <p> Situé aux Berges de la Savoureuse à Belfort, le festival se déroule en hiver, créant une
+atmosphère festive et conviviale pendant la période hivernale. C'est un événement plein
+air unique qui célèbre la jeunesse, la créativité et la culture urbaine.</p>
+        <p> Avec plus de 30 artistes représentant le hip-hop, l'électro et la pop indépendante, le festival attire un public varié : jeunes étudiants, familles curieuses et adultes passionnés le musique.</p>
+        </div>
+<div>
+ <a href="/programme.html" class="button button--cta">Découvrir le programme</a>
+ 
+</section>
+
+<!-- valeurs -->
+
+<section class="valeurs">
+    <div class="festival__content">
+        <div class="valeurs__content">
+            <h2 class="festival__subtitle">Nos valeurs</h2>
+        </div>
+    </div>
+
+
+    <div class="card">
+      <div class="icon heart">
+        <img src="assets/icons/Créativité.svg" class="heart-icon"/>
+      </div>
+      <div><h3>Créativité</h3></div>
+      <p>
+        Encourager l’expression artistique sous toutes ses formes,
+        mettre en avant les jeunes talents locaux et émergents.
+      </p>
+    </div>
+
+    <div class="card">
+      <div class="icon people">
+        <img src="assets/icons/Proximité.svg" class="social-icon"/>
+      </div>
+      <div><h3>Proximité</h3></div>
+      <p>
+        Raffermir les liens entre les artistes et le public local,
+        créer une communauté autour de la musique et la culture.
+      </p>
+    </div>
+
+    <div class="card">
+      <div class="icon leaf">
+        <img src="assets/icons/durabillité.svg" class="leaf-icon"/>
+      </div>
+      <div><h3>Durabilité</h3></div>
+    </div>
+    <p>
+       Promouvoir une démarche éco-responsable, utiliser des supports recyclés et sensibiliser le public.
+      </p>
+    </div>
+  </section>
+
+<!-- fin valeurs -->
+
+<!-- charte -->
+
+ <section class="charte-section">
+    <section class="charte">
+    <div class="festival__title">
+        <h2 class="center">Charte du Festival</h2>
+
+  <section class="charte">
+    <div>
+    <h4>Thématique 2026</h4>
+    <p>
+      "Ensemble, vibrons au rythme du territoire" : une célébration de l’unité,
+      de la créativité et de l’énergie collective autour de la musique
+      et de la culture urbaine.
+    </p>
+
+    <h4>Engagement Environnemental</h4>
+    <p>
+      Nous nous engageons à minimiser l’impact environnemental du festival
+      en utilisant des supports recyclés, en encourageant les transports collectifs
+      et en sensibilisant le public à la durabilité.
+    </p>
+
+    <h4>Inclusivité et Accessibilité</h4>
+    <p>
+      Le festival est ouvert à tous, avec un accent particulier sur l’accessibilité
+      pour les personnes en situation de handicap et la représentation
+      de la diversité culturelle.
+    </p>
+
+    <h4>Soutien aux Talents Locaux</h4>
+    <p>
+      Nous mettons en avant les artistes émergents de la région
+      et créons des opportunités pour les jeunes talents de se faire connaître.
+    </p>
+    </div>
+  </section>
+
+<!-- charte -->
+
+<!-- Added footer section -->
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__logo">
+                <img src="assets/icons/logo.svg" alt="Les rives du Territoire" class="footer__logo-image">
+            </div>
+
+            <div class="footer__menu">
+                <h3 class="footer__menu-title">MENU</h3>
+                <nav class="footer__nav" aria-label="Navigation de pied de page">
+                    <ul class="footer__nav-list">
+                        <li class="footer__nav-item">
+                            <a href="/chemin ver la page evenement" class="footer__nav-link">ÉVÉNEMENT</a>
+                        </li>
+                        <li class="footer__nav-item">
+                            <a href="/chemin vers la page contact" class="footer__nav-link">CONTACT</a>
+                        </li>
+                        <li class="footer__nav-item">
+                            <a href="/chemin vers la page a propos" class="footer__nav-link">À PROPOS</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="footer__social">
+                <h3 class="footer__social-title">NOUS SUIVRE</h3>
+                <div class="footer__social-links">
+                    <!-- Replaced SVG icons with image placeholders -->
+                    <a href="https://www.facebook.com/?locale=fr_FR" class="footer__social-link" aria-label="Facebook">
+                        <img src="assets/icons/facebook.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://www.instagram.com/" class="footer__social-link" aria-label="Instagram">
+                        <img src="assets/icons/instagram.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://x.com/?lang=fr" class="footer__social-link" aria-label="Twitter">
+                        <img src="assets/icons/x.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://www.youtube.com/" class="footer__social-link" aria-label="YouTube">
+                        <img src="assets/icons/youtube.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+<!-- fin footer -->
