--- a/infopratique.html
+++ b/infopratique.html
@@ -69,7 +69,7 @@
                     <a href="/Scène.html" class="menu__link">Scène</a>
                 </li>
                 <li class="menu__item">
-                    <a href="/index.html" class="menu__link">Info pratique</a>
+                    <a href="/infopratique.html" class="menu__link">Info pratique</a>
                 </li>
                 <li class="menu__item">
                     <a href="/Contact.html" class="menu__link">Contact</a>
