--- a/programme.html
+++ b/programme.html
@@ -69,7 +69,7 @@
                     <a href="/Scène.html" class="menu__link">Scène</a>
                 </li>
                 <li class="menu__item">
-                    <a href="/index.html" class="menu__link">Info pratique</a>
+                    <a href="/infopratique.html" class="menu__link">Info pratique</a>
                 </li>
                 <li class="menu__item">
                     <a href="/Contact.html" class="menu__link">Contact</a>
@@ -79,3 +79,53 @@
     </nav>
 
 <!-- fin menu -->
+
+
+
+
+
+<!-- Added footer section -->
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__logo">
+                <img src="assets/icons/logo.svg" alt="Les rives du Territoire" class="footer__logo-image">
+            </div>
+
+            <div class="footer__menu">
+                <h3 class="footer__menu-title">MENU</h3>
+                <nav class="footer__nav" aria-label="Navigation de pied de page">
+                    <ul class="footer__nav-list">
+                        <li class="footer__nav-item">
+                            <a href="/chemin ver la page evenement" class="footer__nav-link">ÉVÉNEMENT</a>
+                        </li>
+                        <li class="footer__nav-item">
+                            <a href="/chemin vers la page contact" class="footer__nav-link">CONTACT</a>
+                        </li>
+                        <li class="footer__nav-item">
+                            <a href="/chemin vers la page a propos" class="footer__nav-link">À PROPOS</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="footer__social">
+                <h3 class="footer__social-title">NOUS SUIVRE</h3>
+                <div class="footer__social-links">
+                    <!-- Replaced SVG icons with image placeholders -->
+                    <a href="https://www.facebook.com/?locale=fr_FR" class="footer__social-link" aria-label="Facebook">
+                        <img src="assets/icons/facebook.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://www.instagram.com/" class="footer__social-link" aria-label="Instagram">
+                        <img src="assets/icons/instagram.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://x.com/?lang=fr" class="footer__social-link" aria-label="Twitter">
+                        <img src="assets/icons/x.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://www.youtube.com/" class="footer__social-link" aria-label="YouTube">
+                        <img src="assets/icons/youtube.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+<!-- fin footer -->
