--- a/Festival.html
+++ b/Festival.html
@@ -83,20 +83,16 @@
 <!-- Festival -->
 
 <section class="festival">
-    <div class="festival__title">
         <h1 class="festival__title">Le Festival</h1>
         <p class="festival__descrition">Découvrez l'histoire, les valeurs et l'équipe derrière Les Rives du
 Territoire</p>
-    </div>
 </section>
 <!-- fin Festival -->
 
 <!-- histoire du festival -->
  <section class="festival__section">
-    <div class="festival__content">
         <div class="histoire_du_festival">
             <h2 class="festival__subtitle">Histoire du festival</h2>
-        </div>
         <div>
             <p> Les Rives du Territoire est un festival de musiques actuelles et de culture urbaine créé en
         2026. Né de la volonté de mettre en avant les talents émergents locaux et de créer une
@@ -114,17 +110,13 @@ air unique qui célèbre la jeunesse, la créativité et la culture urbaine.</p>
 <!-- valeurs -->
 
 <section class="valeurs">
-    <div class="festival__content">
         <div class="valeurs__content">
             <h2 class="festival__subtitle">Nos valeurs</h2>
-        </div>
     </div>
 
 
     <div class="card">
-      <div class="icon heart">
         <img src="assets/icons/Créativité.svg" class="heart-icon"/>
-      </div>
       <div><h3>Créativité</h3></div>
       <p>
         Encourager l’expression artistique sous toutes ses formes,
@@ -133,9 +125,8 @@ air unique qui célèbre la jeunesse, la créativité et la culture urbaine.</p>
     </div>
 
     <div class="card">
-      <div class="icon people">
         <img src="assets/icons/Proximité.svg" class="social-icon"/>
-      </div>
+
       <div><h3>Proximité</h3></div>
       <p>
         Raffermir les liens entre les artistes et le public local,
@@ -144,9 +135,7 @@ air unique qui célèbre la jeunesse, la créativité et la culture urbaine.</p>
     </div>
 
     <div class="card">
-      <div class="icon leaf">
         <img src="assets/icons/durabillité.svg" class="leaf-icon"/>
-      </div>
       <div><h3>Durabilité</h3></div>
     </div>
     <p>
@@ -160,11 +149,9 @@ air unique qui célèbre la jeunesse, la créativité et la culture urbaine.</p>
 <!-- charte -->
 
  <section class="charte-section">
-    <section class="charte">
-    <div class="festival__title">
+    <div class="charte_title">
         <h2 class="center">Charte du Festival</h2>
 
-  <section class="charte">
     <div>
     <h4>Thématique 2026</h4>
     <p>
