--- a/programme.html
+++ b/programme.html
@@ -86,8 +86,116 @@
         <p class="festival__descrition">Découvrez le programme complet du festival avec tous les artistes
 et horaires</p>
 </section>
+<!-- fin Programme -->
 
+<!-- 20 Decembre -->
+ <section>
+      <h2>20 Décembre</h2>
 
+      <div class="artist-card">
+        <h3>Pomme</h3>
+        <p>Pop Indépendante</p>
+        <span>19:00</span><br>
+        <a href="#">Voir le profil →</a>
+      </div>
+
+      <div class="artist-card">
+        <h3>Zaho de Sagazan</h3>
+        <p>French indie</p>
+        <span>20:30</span><br>
+        <a href="#">Voir le profil →</a>
+      </div>
+
+      <div class="artist-card">
+        <h3>Voyou</h3>
+        <p>Hip-Hop</p>
+        <span>20:30</span><br>
+        <a href="#">Voir le profil →</a>
+      </div>
+    </section>
+<!-- fin 20 Decembre -->
+
+<!-- 21 Decembre -->
+<section>
+      <h2>21 Décembre</h2>
+
+      <div class="artist-card">
+        <h3>ichon</h3>
+        <p>Ppo/R&B</p>
+        <span>19:30</span><br>
+        <a href="#">Voir le profil →</a>
+      </div>
+
+      <div class="artist-card">
+        <h3>Jazzy Bazz</h3>
+        <p>Hip-Hop</p>
+        <span>21:00</span><br>
+        <a href="#">Voir le profil →</a>
+      </div>
+
+      <div class="artist-card">
+        <h3>Luidji</h3>
+        <p>Hip-Hop</p>
+        <span>22:30</span><br>
+        <a href="#">Voir le profil →</a>
+      </div>
+    </section>
+<!-- Fin 21 Decembre -->
+
+<!-- 22 Decembre -->
+<section>
+      <h2>22 Décembre</h2>
+
+      <div class="artist-card">
+        <h3>Fakear</h3>
+        <p>Électronique</p>
+        <span>18:00</span><br>
+        <a href="#">Voir le profil →</a>
+      </div>
+
+      <div class="artist-card">
+        <h3>The Avener</h3>
+        <p>House</p>
+        <span>20:00</span><br>
+        <a href="#">Voir le profil →</a>
+      </div>
+
+      <div class="artist-card">
+        <h3>Thylacine</h3>
+        <p>Électronique</p>
+        <span>21:30</span><br>
+        <a href="#">Voir le profil →</a>
+      </div>
+    </section>
+<!-- Fin 22 Decembre -->
+
+<!-- 23 Decembre -->
+<section>
+      <h2>22 Décembre</h2>
+
+      <div class="artist-card">
+        <h3>Flavien Berger</h3>
+        <p>Pop</p>
+        <span>18:00</span><br>
+        <a href="#">Voir le profil →</a>
+      </div>
+
+      <div class="artist-card">
+        <h3>Kazy Lambist</h3>
+        <p>Électronique</p>
+        <span>19:30</span><br>
+        <a href="#">Voir le profil →</a>
+      </div>
+
+      <div class="artist-card">
+        <h3>Hervé</h3>
+        <p>All</p>
+        <span>21:00</span><br>
+        <a href="#">Voir le profil →</a>
+      </div>
+    </section>
+<!-- Fin 23 Decembre -->
+ 
 
 <!-- Added footer section -->
     <footer class="footer">
