Template artistes html

--- a/Pomme.html
+++ b/Pomme.html
@@ -80,124 +80,43 @@
 
 <!-- fin menu -->
 
-<!-- Programme -->
-<section class="Programme">
-        <h1 class="Programme__title">Programme</h1>
-        <p class="festival__descrition">Découvrez le programme complet du festival avec tous les artistes
-et horaires</p>
+<!-- titre -->
+<h1>Pomme</h1>
+<!-- fin titre -->
+
+<!--template artistes-->
+<h1 class="artist__title">Pomme</h1>
+
+
+<img src="/assets/img/Pomme.avif" class="artist__image" />
+
+<section>
+<div class="artist-info">
+    <div class="artist-info__badge artist-info__badge--genre">
+        <div class="artist-info__badge-title">Genre</div>
+            <div class="artist-info__badge-value">Pop Indépendante</div>
+    </div>
+    <div class="artist-info__badge artist-info__badge--scene">
+        <div class="artist-info__badge-title">Scène</div>
+            <div class="artist-info__badge-value">Scène principal</div>
+    </div>
+</div>
 </section>
-<!-- fin Programme -->
 
-<!-- 20 Decembre -->
- <section>
-      <h2>20 Décembre</h2>
-
-      <div class="artist-card">
-        <h3>Pomme</h3>
-        <p>Pop Indépendante</p>
-        <span>19:00</span><br>
-        <a href="/Pomme.html">Voir le profil →</a>
-      </div>
-
-      <div class="artist-card">
-        <h3>Zaho de Sagazan</h3>
-        <p>French indie</p>
-        <span>20:30</span><br>
-        <a href="/ZahodeSagazan.html">Voir le profil →</a>
-      </div>
-
-      <div class="artist-card">
-        <h3>Voyou</h3>
-        <p>Hip-Hop</p>
-        <span>20:30</span><br>
-        <a href="#">Voir le profil →</a>
-      </div>
-    </section>
-<!-- fin 20 Decembre -->
-
-<!-- 21 Decembre -->
 <section>
-      <h2>21 Décembre</h2>
+<div>
+<p class="about__text">
+Artiste française talentueuse, Pomme est connue pour ses mélodies poétiques et sa voix captivante. Ses compositions mêlent pop et folk avec une touche de modernité qui plaît à un large public.
+</p>
+<p class="about__text">
+Avec plusieurs albums à succès et des performances mémorables, Pomme apporte une dimension émotionnelle unique à chaque concert. Son style authentique et ses paroles sincères en font une artiste incontournable de la scène musicale française.
+</p>
+    <p>
+</div>
+ <a href="/404" class="button button--primary">Réserver une place</a>
+</section>
 
-      <div class="artist-card">
-        <h3>ichon</h3>
-        <p>Ppo/R&B</p>
-        <span>19:30</span><br>
-        <a href="#">Voir le profil →</a>
-      </div>
-
-      <div class="artist-card">
-        <h3>Jazzy Bazz</h3>
-        <p>Hip-Hop</p>
-        <span>21:00</span><br>
-        <a href="#">Voir le profil →</a>
-      </div>
-
-      <div class="artist-card">
-        <h3>Luidji</h3>
-        <p>Hip-Hop</p>
-        <span>22:30</span><br>
-        <a href="#">Voir le profil →</a>
-      </div>
-    </section>
-<!-- Fin 21 Decembre -->
-
-<!-- 22 Decembre -->
-<section>
-      <h2>22 Décembre</h2>
-
-      <div class="artist-card">
-        <h3>Fakear</h3>
-        <p>Électronique</p>
-        <span>18:00</span><br>
-        <a href="#">Voir le profil →</a>
-      </div>
-
-      <div class="artist-card">
-        <h3>The Avener</h3>
-        <p>House</p>
-        <span>20:00</span><br>
-        <a href="#">Voir le profil →</a>
-      </div>
-
-      <div class="artist-card">
-        <h3>Thylacine</h3>
-        <p>Électronique</p>
-        <span>21:30</span><br>
-        <a href="#">Voir le profil →</a>
-      </div>
-    </section>
-<!-- Fin 22 Decembre -->
-
-<!-- 23 Decembre -->
-<section>
-      <h2>22 Décembre</h2>
-
-      <div class="artist-card">
-        <h3>Flavien Berger</h3>
-        <p>Pop</p>
-        <span>18:00</span><br>
-        <a href="#">Voir le profil →</a>
-      </div>
-
-      <div class="artist-card">
-        <h3>Kazy Lambist</h3>
-        <p>Électronique</p>
-        <span>19:30</span><br>
-        <a href="#">Voir le profil →</a>
-      </div>
-
-      <div class="artist-card">
-        <h3>Hervé</h3>
-        <p>All</p>
-        <span>21:00</span><br>
-        <a href="#">Voir le profil →</a>
-      </div>
-    </section>
-<!-- Fin 23 Decembre -->
-
-
-<!-- Added footer section -->
+    <!-- Added footer section -->
     <footer class="footer">
         <div class="footer__container">
             <div class="footer__logo">
@@ -241,4 +160,4 @@ et horaires</p>
             </div>
         </div>
     </footer>
-<!-- fin footer -->
+    <!-- fin footer -->
