--- a/Scène.html
+++ b/Scène.html
@@ -79,3 +79,91 @@
     </nav>
 
 <!-- fin menu -->
+
+<!-- Scène -->
+
+<section class="festival">
+        <h1 class="festival__title">Les Scènes </h1>
+        <p class="Scène__descrition">Découvrez les différentes scènes du festival et les artistes qui s'y produisent</p>
+</section>
+<!-- fin Scène -->
+
+<!-- card scène-->
+ <section>
+<img src="/assets/icons/musique.svg" class="artist__image" />
+
+<h2 class="artist__title">Scène principale</h2>
+<p2 class="scènePrincipale__descrition">La plus grande scène du festival avec équipement professionnel</p2>
+
+<div class="artist-info">
+    <div class="artist-info__badge artist-info__badge--genre">
+        <div class="artist-info__badge-title">Capacité</div>
+            <div class="artist-info__badge-value">5000 personnes</div>
+    </div>
+</div>
+<a href="/Scèneprincipale.html">Plus d'info→</a>
+</section>
+<!-- fin card scène-->
+
+<!-- card scène-->
+  <section>
+<img src="/assets/icons/eclair.svg" class="artist__image" />
+
+<h2 class="artist__title">Scène Électro </h2>
+<p2 class="scènePrincipale__descrition">Dédiée à la musique et aux DJ</p2>
+
+<div class="artist-info">
+    <div class="artist-info__badge artist-info__badge--genre">
+        <div class="artist-info__badge-title">Capacité</div>
+            <div class="artist-info__badge-value">2000 personnes</div>
+    </div>
+</div>
+<a href="#">Plus d'info→</a>
+</section>
+<!-- fin card scène-->
+
+<!-- Added footer section -->
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__logo">
+                <img src="assets/icons/logo.svg" alt="Les rives du Territoire" class="footer__logo-image">
+            </div>
+
+            <div class="footer__menu">
+                <h3 class="footer__menu-title">MENU</h3>
+                <nav class="footer__nav" aria-label="Navigation de pied de page">
+                    <ul class="footer__nav-list">
+                        <li class="footer__nav-item">
+                            <a href="/chemin ver la page evenement" class="footer__nav-link">ÉVÉNEMENT</a>
+                        </li>
+                        <li class="footer__nav-item">
+                            <a href="/chemin vers la page contact" class="footer__nav-link">CONTACT</a>
+                        </li>
+                        <li class="footer__nav-item">
+                            <a href="/chemin vers la page a propos" class="footer__nav-link">À PROPOS</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="footer__social">
+                <h3 class="footer__social-title">NOUS SUIVRE</h3>
+                <div class="footer__social-links">
+                    <!-- Replaced SVG icons with image placeholders -->
+                    <a href="https://www.facebook.com/?locale=fr_FR" class="footer__social-link" aria-label="Facebook">
+                        <img src="assets/icons/facebook.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://www.instagram.com/" class="footer__social-link" aria-label="Instagram">
+                        <img src="assets/icons/instagram.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://x.com/?lang=fr" class="footer__social-link" aria-label="Twitter">
+                        <img src="assets/icons/x.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://www.youtube.com/" class="footer__social-link" aria-label="YouTube">
+                        <img src="assets/icons/youtube.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+<!-- fin footer -->
