--- a/Pomme.html
+++ b/Pomme.html
@@ -85,12 +85,11 @@
 <!-- fin titre -->
 
 <!--template artistes-->
-<h1 class="artist__title">Pomme</h1>
-
-
-<img src="/assets/img/Pomme.avif" class="artist__image" />
 
 <section>
+<img src="/assets/img/Pomme.avif" class="artist__image" />
+
+
 <div class="artist-info">
     <div class="artist-info__badge artist-info__badge--genre">
         <div class="artist-info__badge-title">Genre</div>
@@ -102,9 +101,10 @@
     </div>
 </div>
 </section>
-<!-- fin template artistes-->
+
 
 <section>
+<h2 class="artist__title">À propos</h2>
 <div>
 <p class="about__text">
 Artiste française talentueuse, Pomme est connue pour ses mélodies poétiques et sa voix captivante. Ses compositions mêlent pop et folk avec une touche de modernité qui plaît à un large public.
@@ -116,6 +116,7 @@ Avec plusieurs albums à succès et des performances mémorables, Pomme apporte 
 </div>
  <a href="/404" class="button button--primary">Réserver une place</a>
 </section>
+<!-- fin template artistes-->
 
     <!-- Added footer section -->
     <footer class="footer">
