--- a/Scène.html
+++ b/Scène.html
@@ -82,8 +82,8 @@
 
 <!-- Scène -->
 
-<section class="festival">
-        <h1 class="festival__title">Les Scènes </h1>
+<section class="Scène">
+        <h1 class="Scène__title">Les Scènes </h1>
         <p class="Scène__descrition">Découvrez les différentes scènes du festival et les artistes qui s'y produisent</p>
 </section>
 <!-- fin Scène -->
