--- a/ZahodeSagazan.html
+++ b/ZahodeSagazan.html
@@ -105,6 +105,7 @@
 </section>
 
 <section>
+<h2 class="artist__title">À propos</h2>
 <div>
 <p class="about__text">
 Artiste française sensible et envoûtante, Zaho de Sagazan s’impose par une voix grave et habitée qui ne laisse pas indifférent.
@@ -114,8 +115,9 @@ Ses chansons mêlent chanson française et sonorités électroniques, créant un
 </div>
  <a href="/404" class="button button--primary">Réserver une place</a>
 </section>
+<!--template artistes-->
 
-    <!-- Added footer section -->
+<!-- Added footer section -->
     <footer class="footer">
         <div class="footer__container">
             <div class="footer__logo">
@@ -159,4 +161,4 @@ Ses chansons mêlent chanson française et sonorités électroniques, créant un
             </div>
         </div>
     </footer>
-    <!-- fin footer -->
+<!-- fin footer -->
