--- a/Scèneprincipale.html
+++ b/Scèneprincipale.html
@@ -24,6 +24,7 @@
 
 <body>
 
+    
 <!-- header -->
 
     <header class="header">
@@ -43,3 +44,113 @@
 
 <!-- fin header -->
 
+
+    <!-- menu -->
+    <nav class="menu" id="menu" aria-label="Navigation principale">
+        <div class="menu__header">
+            <a href="index.html" class="menu__logo">
+                <img src="assets/icons/logo.svg" alt="Les rives du Territoire" class="menu__logo-img">
+            </a>
+
+            <button class="menu__close" aria-label="Fermer le menu">
+                <span class="menu__close-bar"></span>
+                <span class="menu__close-bar"></span>
+            </button>
+        </div>
+
+        <div class="menu__nav">
+            <ul class="menu__list">
+                <li class="menu__item">
+                    <a href="/Festival.html" class="menu__link">Festival</a>
+                </li>
+                <li class="menu__item">
+                    <a href="/programme.html" class="menu__link">Programme</a>
+                </li>
+                <li class="menu__item">
+                    <a href="/Scène.html" class="menu__link">Scène</a>
+                </li>
+                <li class="menu__item">
+                    <a href="/infopratique.html" class="menu__link">Info pratique</a>
+                </li>
+                <li class="menu__item">
+                    <a href="/Contact.html" class="menu__link">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+<!-- fin menu -->
+
+
+<!-- Scène principale-->
+
+<section class="Scèneprincipale">
+        <h1 class="Scèneprincipale__title">Les Scènes </h1>
+</section>
+<!-- fin scene principale -->
+
+<!--template artistes-->
+
+<section>
+<img src="/assets/img/Img a propos.avif" class="artist__image" />
+</section>
+
+
+<section>
+<h2 class="artist__title">À propos</h2>
+<div>
+<p class="about__text">
+Véritable cœur du festival, la Scène Principale accueille les artistes majeurs de la programmation. Conçue pour offrir une qualité sonore optimale et une scénographie soignée, elle permet au public de vivre des concerts intenses et mémorables. Grâce à son équipement professionnel et à sa grande capacité, cette scène rassemble les festivaliers autour de performances uniques, de jour comme de nuit.</p>
+    <p>
+</div>
+ <a href="/404" class="button button--primary">Réserver une place</a>
+</section>
+<!-- fin template artistes-->
+
+
+
+<!-- Added footer section -->
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__logo">
+                <img src="assets/icons/logo.svg" alt="Les rives du Territoire" class="footer__logo-image">
+            </div>
+
+            <div class="footer__menu">
+                <h3 class="footer__menu-title">MENU</h3>
+                <nav class="footer__nav" aria-label="Navigation de pied de page">
+                    <ul class="footer__nav-list">
+                        <li class="footer__nav-item">
+                            <a href="/chemin ver la page evenement" class="footer__nav-link">ÉVÉNEMENT</a>
+                        </li>
+                        <li class="footer__nav-item">
+                            <a href="/chemin vers la page contact" class="footer__nav-link">CONTACT</a>
+                        </li>
+                        <li class="footer__nav-item">
+                            <a href="/chemin vers la page a propos" class="footer__nav-link">À PROPOS</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="footer__social">
+                <h3 class="footer__social-title">NOUS SUIVRE</h3>
+                <div class="footer__social-links">
+                    <!-- Replaced SVG icons with image placeholders -->
+                    <a href="https://www.facebook.com/?locale=fr_FR" class="footer__social-link" aria-label="Facebook">
+                        <img src="assets/icons/facebook.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://www.instagram.com/" class="footer__social-link" aria-label="Instagram">
+                        <img src="assets/icons/instagram.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://x.com/?lang=fr" class="footer__social-link" aria-label="Twitter">
+                        <img src="assets/icons/x.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://www.youtube.com/" class="footer__social-link" aria-label="YouTube">
+                        <img src="assets/icons/youtube.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+<!-- fin footer -->
