--- a/infopratique.html
+++ b/infopratique.html
@@ -80,3 +80,203 @@
 
 <!-- fin menu -->
 
+<!-- info pratique -->
+<section class="infopratique">
+        <h1 class="infopratique">Info pratique</h1>
+        <p class="infopratique__descrition">Tout ce que vous devez savoir pour préparer votre visite</p>
+</section>
+<!-- fin Contact -->
+
+  <!-- TARIFS -->
+        <h2 class="info__section-title">Tarif</h2>
+
+        <div class="tarifs">
+
+            <div class="tarif-card">
+                <h3 class="tarif-card__title">Pass 1 jour</h3>
+                <p class="tarif-card__price">35€</p>
+             <a href="/404" class="button button--primary">Acheter</a>
+            </div>
+
+            <div class="tarif-card">
+                <h3 class="tarif-card__title">Pass 2 jours</h3>
+                <p class="tarif-card__price">60€</p>
+                <a href="/404" class="button button--primary">Acheter</a>
+            </div>
+
+            <div class="tarif-card">
+                <h3 class="tarif-card__title">Pass 4 jours</h3>
+                <p class="tarif-card__price">99€</p>
+                <a href="/404" class="button button--primary">Acheter</a>
+            </div>
+
+            <div class="tarif-card">
+                <h3 class="tarif-card__title">VIP Pass</h3>
+                <p class="tarif-card__price">150€</p>
+                <a href="/404" class="button button--primary">Acheter</a>
+            </div>
+
+        </div>
+
+        <!-- HÉBERGEMENT -->
+        <h2 class="info__section-title">Hébergement</h2>
+
+        <div class="hebergement">
+
+            <div class="hebergement-card">
+                <div class="hebergement-card__icon"></div>
+                <div class="hebergement-card__content">
+                    <h3 class="hebergement-card__title">Hôtel Belfort Centre</h3>
+                    <p class="hebergement-card__desc">Hôtel 3 étoiles<br>À 2 km du festival<br>80-120€/nuit</p>
+                </div>
+            </div>
+
+            <div class="hebergement-card">
+                <div class="hebergement-card__icon"></div>
+                <div class="hebergement-card__content">
+                    <h3 class="hebergement-card__title">Auberge de Jeunesse</h3>
+                    <p class="hebergement-card__desc">Auberge<br>1.5 km du festival<br>25-35€/nuit</p>
+                </div>
+            </div>
+
+            <div class="hebergement-card">
+                <div class="hebergement-card__icon"></div>
+                <div class="hebergement-card__content">
+                    <h3 class="hebergement-card__title">Camping Savoureuse</h3>
+                    <p class="hebergement-card__desc">Camping<br>500 m du festival<br>15-25€/nuit</p>
+                </div>
+            </div>
+
+            <div class="hebergement-card">
+                <div class="hebergement-card__icon"></div>
+                <div class="hebergement-card__content">
+                    <h3 class="hebergement-card__title">Airbnb Belfort</h3>
+                    <p class="hebergement-card__desc">Location privée<br>variable<br>40-100€/nuit</p>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- TRANSPORTS -->
+        <h2 class="info__section-title">Transports</h2>
+
+        <div class="transport">
+
+            <div class="transport-card">
+                <div class="transport-card__icon"></div>
+                <h3 class="transport-card__title">Train</h3>
+                <p class="transport-card__desc">
+                    Gare SNCF de Belfort à 2 km du festival. Navettes gratuites disponibles.
+                </p>
+                <a class="transport-card__link" href="#">Consulter les horaires →</a>
+            </div>
+
+            <div class="transport-card">
+                <div class="transport-card__icon"></div>
+                <h3 class="transport-card__title">Voiture</h3>
+                <p class="transport-card__desc">
+                    Parking gratuit disponible. Accès par l’autoroute A36 ou la route N83.
+                </p>
+                <a class="transport-card__link" href="#">Voir la localisation →</a>
+            </div>
+
+            <div class="transport-card">
+                <div class="transport-card__icon"></div>
+                <h3 class="transport-card__title">Covoiturage</h3>
+                <p class="transport-card__desc">
+                    Plateforme de covoiturage partenaire pour réduire les frais et l'impact environnemental.
+                </p>
+                <a class="transport-card__link" href="#">Trouver un covoiturage →</a>
+            </div>
+
+        </div>
+
+        <!-- FAQ -->
+        <h2 class="info__section-title">FAQ</h2>
+
+        <div class="faq">
+
+            <div class="faq-item">
+                <button class="faq-item__question">Puis-je annuler mon billet ?</button>
+                <div class="faq-item__answer">
+                    Les billets peuvent être remboursés jusqu’à 30 jours avant le festival. Après cette date, seuls les échanges sont possibles. Veuillez contacter notre équipe pour les demandes d’annulation.
+                </div>
+            </div>
+
+            <div class="faq-item">
+                <button class="faq-item__question">Y a-t-il des restrictions d’âge ?</button>
+                <div class="faq-item__answer">
+                    Le festival est ouvert à tous les âges. Les enfants de moins de 12 ans bénéficient d’une entrée gratuite s'ils sont accompagnés d’un adulte. Des zones familiales sont disponibles pour le confort des jeunes spectateurs.
+                </div>
+            </div>
+
+            <div class="faq-item">
+                <button class="faq-item__question">Que puis-je apporter au festival ?</button>
+                <div class="faq-item__answer">
+                    Vous pouvez apporter une gourde réutilisable (les bouteilles en plastique sont interdites), un siège pliant, une couverture et des vêtements chauds. Les articles dangereux, les drones et les enregistrements professionnels sont interdits.
+                </div>
+            </div>
+
+            <div class="faq-item">
+                <button class="faq-item__question">Y a-t-il des services de restauration ?</button>
+                <div class="faq-item__answer">
+                    Vous pouvez apporter une gourde réutilisable (les bouteilles en plastique sont interdites), un siège pliant, une couverture et des vêtements chauds. Des stands de restauration, kiosques et bars seront disponibles.
+                </div>
+            </div>
+
+            <div class="faq-item">
+                <button class="faq-item__question">Les sacs sont-ils autorisés ?</button>
+                <div class="faq-item__answer">
+                    Oui, les sacs de petite taille sont autorisés sur le site du festival. Pour des raisons de sécurité, tous les sacs pourront être vérifiés à l’entrée. Les sacs volumineux et objets jugés dangereux sont interdits.
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- Added footer section -->
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__logo">
+                <img src="assets/icons/logo.svg" alt="Les rives du Territoire" class="footer__logo-image">
+            </div>
+
+            <div class="footer__menu">
+                <h3 class="footer__menu-title">MENU</h3>
+                <nav class="footer__nav" aria-label="Navigation de pied de page">
+                    <ul class="footer__nav-list">
+                        <li class="footer__nav-item">
+                            <a href="/chemin ver la page evenement" class="footer__nav-link">ÉVÉNEMENT</a>
+                        </li>
+                        <li class="footer__nav-item">
+                            <a href="/chemin vers la page contact" class="footer__nav-link">CONTACT</a>
+                        </li>
+                        <li class="footer__nav-item">
+                            <a href="/chemin vers la page a propos" class="footer__nav-link">À PROPOS</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="footer__social">
+                <h3 class="footer__social-title">NOUS SUIVRE</h3>
+                <div class="footer__social-links">
+                    <!-- Replaced SVG icons with image placeholders -->
+                    <a href="https://www.facebook.com/?locale=fr_FR" class="footer__social-link" aria-label="Facebook">
+                        <img src="assets/icons/facebook.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://www.instagram.com/" class="footer__social-link" aria-label="Instagram">
+                        <img src="assets/icons/instagram.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://x.com/?lang=fr" class="footer__social-link" aria-label="Twitter">
+                        <img src="assets/icons/x.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                    <a href="https://www.youtube.com/" class="footer__social-link" aria-label="YouTube">
+                        <img src="assets/icons/youtube.svg" alt="" aria-hidden="true" class="footer__social-icon">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+<!-- fin footer -->
